# empire1

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BATTLE_ANALYSIS.md  CLAUDE.md  Dockerfile  analyze_maps.py  attach.sh  balancing.md  battle_sim.py  config  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  gameserver.db  nginx.conf.example  restart.sh  run_balancing.py  run_tests.sh  save-state.sh  server.key  sim_map.py  state.yaml  test_early_maps.py
docs/: API.md  (+6 more)
python_server/: .coverage  BATTLE_GRAFIK_PLAN.md  MISSING_HANDLERS.md  PORTIERUNGSPLAN.md  alembic.ini  gameserver.db  messages.yaml  messages.yaml_  migrate_replays_to_gz.py  pyproject.toml  requirements.txt  restart.sh  run_tests.sh  state copy 2.yaml  state copy.yaml  state.yaml  state2.yaml  state_godmod.yaml  state_godmode.yaml  state_lokkatmaps.yaml  state_restart.yaml  state_save.yaml  state_save.yaml2
python_server/config/: EPOCHS.md  StateDump_.xml  ai_templates.yaml  ai_waves copy.yaml  ai_waves.yaml  artefacts.yaml  artifacts.yaml  buildings.yaml  critters.yaml  game.yaml  items.yaml  knowledge.yaml  rulers.yaml  saved_maps.yaml  structures.yaml
python_server/config/maps/: .gitkeep  default.yaml
python_server/migrations/: env.py
python_server/migrations/versions/: 977b61c84d43_baseline.py
python_server/src/gameserver/: __init__.py  main.py  settings.py
python_server/src/gameserver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python_server/src/gameserver/debug/: __init__.py  dashboard.py  monitor.py  signals.py
python_server/src/gameserver/engine/: INTERFACES.md  __init__.py  ai_service.py  army_service.py  attack_service.py  battle_service.py  bot_detection.py  empire_service.py  game_loop.py  global_state.py  hex_pathfinding.py  power_service.py  statistics.py  upgrade_provider.py
python_server/src/gameserver/loaders/: INTERFACES.md  __init__.py  ai_loader.py  game_config_loader.py  item_loader.py  map_loader.py  string_loader.py
python_server/src/gameserver/models/: INTERFACES.md  __init__.py  army.py  attack.py  battle.py  critter.py  empire.py  hex.py  items.py  map.py  messages.py  shot.py  structure.py
python_server/src/gameserver/network/: INTERFACES.md  __init__.py  auth.py  handlers.py  jwt_auth.py  metrics.py  rest_api.py  rest_models.py  router.py  serialization.py  server.py  web_server.py
python_server/src/gameserver/persistence/: INTERFACES.md  __init__.py  database.py  message_store.py  replay.py  state_load.py  state_save.py
python_server/states/daily/: state_2026-04-17.yaml
python_server/tests/: conftest.py  test_account.py  test_ai_service.py  test_ai_waves_era_consistency.py  test_army_reuse_after_battle.py  test_artefact_effects.py  test_artefact_steal.py  test_artifact_effects.py  test_artifact_steal.py  test_artifact_steal_effect.py  test_attack_time_modifiers.py  test_auth_argon2.py  test_backup_loop.py  test_battle_crash_recovery.py  test_battle_integration.py  test_battle_stats_logging.py  test_battle_subscription.py  test_build_item.py  test_building_costs.py  test_building_effects_completion.py  test_catalog_integrity.py  test_combat_effects.py  test_critter_movement.py  test_database.py  test_debug_dashboard.py  test_effect_categories.py  test_effects_constants.py  test_empire_queues.py  test_enable_nav_effects.py  test_end_rally.py  test_engine_extensions.py  test_era_dependencies.py  test_eras.py  test_events.py  test_game_config.py  test_hex_map.py  test_hex_math.py  test_hex_pathfinding.py  test_income_calculation.py  test_item_loader.py  (+35 more)
(+201 files in other folders)
