[project]
name = "gameserver"
version = "0.1.0"
description = "Multiplayer Tower-Defense Empire-Building Game Server"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "msgpack>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pyjwt>=2.0",
    "argon2-cffi>=23.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "prometheus-client>=0.19",
    "alembic>=1.16.5",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "httpx>=0.27",
]

[project.scripts]
gameserver = "gameserver.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
